--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<body class="landing">
 		<div id="page-wrapper">
 
-			<!-- Header -->
+			<!-- Header
 				<header id="header">
 					<h1 id="logo"><a href="index.html">Landed</a></h1>
 					<nav id="nav">
