--- a/index.html
+++ b/index.html
@@ -50,11 +50,10 @@
 				<section id="banner">
 					<div class="content">
 						<header>
-							<h2>The future has landed</h2>
-							<p>And there are no hoverboards or flying cars.<br />
-							Just apps. Lots of mother flipping apps.</p>
+							<h2>CS:GO em MODO HARD</h2>
+							<p>Todos os passos de como sair do Prata e chegar ao infinito e além.</p>
 						</header>
-						<span class="image"><img src="images/pic01.jpg" alt="" /></span>
+						<span class="image"><img src="http://media.steampowered.com/apps/csgo/blog/images/fb_image.png?v=4" alt="" /></span>
 					</div>
 					<a href="#one" class="goto-next scrolly">Next</a>
 				</section>
