--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 							<h2>CS:GO em MODO HARD</h2>
 							<p>Todos os passos de como sair do Prata e chegar ao infinito e além.</p>
 						</header>
-						<span class="image"><img src="http://media.steampowered.com/apps/csgo/blog/images/fb_image.png?v=4" alt="" /></span>
+						<span class="image"><img src="https://blog.gamesacademy.com.br/content/images/2016/10/csgopromo-1.jpg" alt="" /></span>
 					</div>
 					<a href="#one" class="goto-next scrolly">Next</a>
 				</section>
