--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 					<a href="#four" class="goto-next scrolly">Next</a>
 				</section>
 
-			<!-- Four -->
+			<!-- Four 
 				<section id="four" class="wrapper style1 special fade-up">
 					<div class="container">
 						<header class="major">
