--- a/index.html
+++ b/index.html
@@ -175,13 +175,13 @@
 				<section id="five" class="wrapper style2 special fade">
 					<div class="container">
 						<header>
-							<h2>Magna faucibus lorem diam</h2>
-							<p>Ante metus praesent faucibus ante integer id accumsan eleifend</p>
+							<h2>Quero fazer parte</h2>
+							<p>Mande seu e-mail que iremos entrar em contato<p>
 						</header>
 						<form method="post" action="#" class="container 50%">
 							<div class="row uniform 50%">
 								<div class="8u 12u$(xsmall)"><input type="email" name="email" id="email" placeholder="Your Email Address" /></div>
-								<div class="4u$ 12u$(xsmall)"><input type="submit" value="Get Started" class="fit special" /></div>
+								<div class="4u$ 12u$(xsmall)"><input type="submit" value="Bora lá" class="fit special" /></div>
 							</div>
 						</form>
 					</div>
