--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 			<!-- One -->
 				<section id="one" class="spotlight style1 bottom">
-					<span class="image fit main"><img src="http://imgur.com/sCp80mV" alt="" /></span>
+					<span class="image fit main"><img src="http://i.imgur.com/sCp80mV.jpg" alt="" /></span>
 					<div class="content">
 						<div class="container">
 							<div class="row">
