--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
 			<!-- Two -->
 				<section id="two" class="spotlight style2 right">
-					<span class="image fit main"><img src="http://www.logicalincrements.com/assets/img/articles/csgo/csgowallpaper2.jpg" /></span>
+					<span class="image fit main"><img src="http://i.imgur.com/Ioy8Zv9.jpg" /></span>
 					<div class="content">
 						<header>
 							<h2>Interdum amet non magna accumsan</h2>
@@ -108,7 +108,7 @@
 
 			<!-- Three -->
 				<section id="three" class="spotlight style3 left">
-					<span class="image fit main bottom"><img src="https://linustechtips.com/main/uploads/monthly_2016_05/csgpo111.jpg.190eaeac06a519d91c74033ec7b98934.jpg" alt="" /></span>
+					<span class="image fit main bottom"><img src="http://i.imgur.com/MYx1Piq.jpg" alt="" /></span>
 					<div class="content">
 						<header>
 							<h2>Interdum felis blandit praesent sed augue</h2>
