--- a/index.html
+++ b/index.html
@@ -66,23 +66,15 @@
 							<div class="row">
 								<div class="4u 12u$(medium)">
 									<header>
-										<h2>Odio faucibus ipsum integer consequat</h2>
-										<p>Nascetur eu nibh vestibulum amet gravida nascetur praesent</p>
+										<h2>Como assim?</h2>
+										<p>pode pá</p>
 									</header>
 								</div>
 								<div class="4u 12u$(medium)">
-									<p>Feugiat accumsan lorem eu ac lorem amet sed accumsan donec.
-									Blandit orci porttitor semper. Arcu phasellus tortor enim mi
-									nisi praesent dolor adipiscing. Integer mi sed nascetur cep aliquet
-									augue varius tempus lobortis porttitor accumsan consequat
-									adipiscing lorem dolor.</p>
+									<p>No entanto, não podemos esquecer que o consenso sobre a necessidade de qualificação cumpre um papel essencial na formulação da gestão inovadora da qual fazemos parte..</p>
 								</div>
 								<div class="4u$ 12u$(medium)">
-									<p>Morbi enim nascetur et placerat lorem sed iaculis neque ante
-									adipiscing adipiscing metus massa. Blandit orci porttitor semper.
-									Arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer
-									mi sed nascetur cep aliquet augue varius tempus. Feugiat lorem
-									ipsum dolor nullam.</p>
+									<p>Não obstante, a revolução dos costumes exige a precisão e a definição dos relacionamentos verticais entre as hierarquias..</p>
 								</div>
 							</div>
 						</div>
@@ -95,12 +87,11 @@
 					<span class="image fit main"><img src="http://i.imgur.com/Ioy8Zv9.jpg" /></span>
 					<div class="content">
 						<header>
-							<h2>Interdum amet non magna accumsan</h2>
-							<p>Nunc commodo accumsan eget id nisi eu col volutpat magna</p>
+							<h2>E como funciona?</h2>
+							<p>será que rola assim?</p>
 						</header>
-						<p>Feugiat accumsan lorem eu ac lorem amet ac arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer mi sed nascetur cep aliquet augue varius tempus lobortis porttitor lorem et accumsan consequat adipiscing lorem.</p>
+						<p>É importante questionar o quanto a revolução dos costumes assume importantes posições no estabelecimento dos modos de operação convencionais.</p>
 						<ul class="actions">
-							<li><a href="#" class="button">Learn More</a></li>
 						</ul>
 					</div>
 					<a href="#three" class="goto-next scrolly">Next</a>
@@ -111,13 +102,12 @@
 					<span class="image fit main bottom"><img src="http://i.imgur.com/MYx1Piq.jpg" alt="" /></span>
 					<div class="content">
 						<header>
-							<h2>Interdum felis blandit praesent sed augue</h2>
-							<p>Accumsan integer ultricies aliquam vel massa sapien phasellus</p>
+							<h2>Concluindo o que estava sendo dito acima</h2>
+							<p>sobre os pontos de...</p>
 						</header>
-						<p>Feugiat accumsan lorem eu ac lorem amet ac arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer mi sed nascetur cep aliquet augue varius tempus lobortis porttitor lorem et accumsan consequat adipiscing lorem.</p>
+						<p>Ainda assim, existem dúvidas a respeito de como a necessidade de renovação processual cumpre um papel essencial na formulação dos conhecimentos estratégicos para atingir a excelência.</p>
 						<ul class="actions">
-							<li><a href="#" class="button">Learn More</a></li>
-						</ul>
+													</ul>
 					</div>
 					<a href="#four" class="goto-next scrolly">Next</a>
 				</section>
