--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
 							<p>será que rola assim?</p>
 						</header>
 						<p>É importante questionar o quanto a revolução dos costumes assume importantes posições no estabelecimento dos modos de operação convencionais.</p>
+						<p>Por conseguinte, o desenvolvimento contínuo de distintas formas de atuação é uma das consequências do retorno esperado a longo prazo.</p>
 						<ul class="actions">
 						</ul>
 					</div>
@@ -106,6 +107,7 @@
 							<p>sobre os pontos de...</p>
 						</header>
 						<p>Ainda assim, existem dúvidas a respeito de como a necessidade de renovação processual cumpre um papel essencial na formulação dos conhecimentos estratégicos para atingir a excelência.</p>
+						<p>No mundo atual, o fenômeno da Internet prepara-nos para enfrentar situações atípicas decorrentes dos conhecimentos estratégicos para atingir a excelência.</p>
 						<ul class="actions">
 													</ul>
 					</div>
