--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 						<header>
 							<h2>CS:GO em MODO HARD</h2>
 							<p>Todos os passos de como sair do Prata e chegar ao infinito e além.</p>
+							<P>Desta maneira, a expansão dos mercados mundiais cumpre um papel essencial na formulação das regras de conduta normativas.</P>
 						</header>
 						<span class="image"><img src="https://blog.gamesacademy.com.br/content/images/2016/10/csgopromo-1.jpg" alt="" /></span>
 					</div>
